--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "2.1.2",
+    "@mdx-js/react": "2.1.2",
+    "@next/mdx": "12.1.6",
+    "gray-matter": "4.0.3",
     "next": "12.1.6",
+    "next-mdx-remote": "4.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rehype-highlight": "5.0.2",
+    "rehype-pretty-code": "0.3.2",
+    "shiki": "0.10.1"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
