--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "@mdx-js/loader": "2.1.2",
     "@mdx-js/react": "2.1.2",
-    "@next/mdx": "12.1.6",
+    "@next/mdx": "12.2.2",
     "gray-matter": "4.0.3",
-    "next": "12.1.6",
+    "next": "12.2.2",
     "next-mdx-remote": "4.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-highlight": "5.0.2",
     "rehype-pretty-code": "0.3.2",
+    "remark-gfm": "3.0.1",
     "shiki": "0.10.1"
   },
   "devDependencies": {
@@ -26,7 +27,7 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "12.2.2",
     "typescript": "4.7.4"
   }
 }
