--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "dev-blog",
   "version": "0.1.0",
   "private": true,
+  "type":"module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -28,6 +30,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.2",
+    "next-sitemap": "3.1.11",
     "typescript": "4.7.4"
   }
 }
