--- a/package.json
+++ b/package.json
@@ -1,37 +1,18 @@
 {
   "name": "dev-blog",
-  "version": "0.1.0",
-  "private": true,
   "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "postbuild": "next-sitemap",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@mdx-js/loader": "2.3.0",
-    "@mdx-js/react": "2.3.0",
-    "@next/mdx": "13.4.3",
-    "dayjs": "1.11.7",
-    "gray-matter": "4.0.3",
-    "next": "13.4.3",
-    "next-mdx-remote": "4.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "rehype-highlight": "6.0.0",
-    "rehype-pretty-code": "0.9.5",
-    "remark-gfm": "3.0.1",
-    "shiki": "0.14.2"
-  },
-  "devDependencies": {
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.2.2",
-    "next-sitemap": "4.1.3",
-    "typescript": "5.0.4"
+    "@astrojs/mdx": "1.0.0",
+    "@astrojs/rss": "3.0.0",
+    "@astrojs/sitemap": "3.0.0",
+    "astro": "3.0.8"
   }
 }
